# cpp_rsc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/modules/: cpp_resource.cmake
cmake_test/: CMakeLists.txt  rc_test_main.cpp
data/: 1.txt  test1.rsc
src/: CMakeLists.txt  cpp_rsc.cpp  rsc_create_files.h  rsc_file_parse.h
